# openapi.yml
@@ -356,6 +356,10 @@ paths:
                   type: integer
                   example: 4
                   description: evaluate in review (1 to 5)
+                bookmark:
+                  type: integer
+                  example: 1
+                  description: bookmark(1) or not bookmark(0)
                 review_img:
                   type: string
                   format: binary
